<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name" translatable="false">Infinity</string>
    <string name="login_activity_label">Login</string>
    <string name="Chat_activity_label">Chat</string>
    <string name="search_activity_label" translatable="false"> </string>
    <string name="comment_activity_label">Send Comment</string>
    <string name="comment_activity_label_is_replying">Reply</string>
    <string name="post_text_activity_label">Text Post</string>
    <string name="subreddit_selection_activity_label">Select a Subreddit</string>
    <string name="post_link_activity_label">Link Post</string>
    <string name="post_image_activity_label">Image Post</string>
    <string name="post_video_activity_label">Video Post</string>
    <string name="rules_activity_label">Rules</string>
    <string name="search_subreddits_activity_label">Subreddits</string>
    <string name="edit_post_activity_label">Edit Post</string>
    <string name="edit_comment_activity_label">Edit Comment</string>
    <string name="view_message_activity_label">Inbox</string>
    <string name="settings_activity_label">Settings</string>
    <string name="account_saved_thing_activity_label">Saved</string>
    <string name="create_multi_reddit_activity_label">Create Multireddit</string>
    <string name="subreddit_multiselection_activity_label">Select Subreddits</string>
    <string name="custom_theme_listing_activity_label">Custom Themes</string>
    <string name="customize_theme_activity_label">Customize Theme</string>
    <string name="customize_theme_activity_create_theme_label">Create Theme</string>
    <string name="theme_preview_activity_label">Theme Preview</string>
    <string name="edit_multi_reddit_activity_label">Edit Multireddit</string>
    <string name="selected_subeddits_activity_label">Selected Subreddits</string>
    <string name="report_activity_label">Report</string>
    <string name="view_imgur_media_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_imgur_media_activity_video_label">Video %1$d/%2$d</string>
    <string name="send_private_message_activity_label">Send PM</string>
    <string name="view_reddit_gallery_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_gif_label">Gif %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_video_label">Video %1$d/%2$d</string>
    <string name="submit_crosspost_activity_label">Crosspost</string>
    <string name="give_award_activity_label">Give Award</string>
    <string name="subreddit_filter_popular_and_all_activity_label">r/all and r/popular</string>
    <string name="customize_post_filter_activity_label">Customize Post Filter</string>
    <string name="filtered_posts_activity_subtitle">Filtered Posts</string>
    <string name="post_filter_preference_activity_label">Post Filter</string>
    <string name="search_users_result_activity_label">Users</string>
    <string name="multireddit_selection_activity_label">Select a Multireddit</string>
    <string name="post_gallery_activity_label">Gallery Post</string>
    <string name="trending_activity_label">Trending</string>
    <string name="wiki_activity_label">Wiki</string>
    <string name="edit_profile_activity_label">Edit Profile</string>
    <string name="post_poll_activity_label">Poll Post</string>
    <string name="history_activity_label">History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_download">Download</string>
    <string name="nsfw">NSFW</string>
    <string name="settings_notification_master_title">Notification</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_amoled_dark_title">Amoled Dark</string>
    <string name="settings_interface_title">Interface</string>
    <string name="settings_gestures_and_buttons_title">Gestures &amp; Buttons</string>
    <string name="settings_save_front_page_scrolled_position_title">Save Scrolled Position in HOME</string>
    <string name="settings_save_front_page_scrolled_position_summary">Browse new posts after refreshing in HOME (Front Page, sort type: Best)</string>
    <string name="settings_link_handler_title">Link Handler</string>
    <string name="settigns_video_title">Video</string>
    <string name="only_for_logged_in_user">Only for Logged-in User</string>
    <string name="settings_main_page_back_button_action">Main Page Back Button Action</string>
    <string name="settings_show_top_level_comments_first_title">Show Top-level Comments First</string>
    <string name="settings_show_comment_divider_title">Show Comment Divider</string>
    <string name="settings_comment_toolbar_hide_on_click">Click to Show/Hide Comment Toolbar</string>
    <string name="settings_fully_collapse_comment_title">Fully Collapse Comment</string>
    <string name="settings_comment_toolbar_hidden">Comment Toolbar Hidden by Default</string>
    <string name="settings_nsfw_and_spoiler_title">NSFW &amp; Spoiler</string>
    <string name="settings_about_master_title">About</string>
    <string name="settings_acknowledgement_master_title">Acknowledgement</string>
    <string name="settings_credits_master_title">Credits</string>
    <string name="settings_credits_icon_foreground_title">Icon Foreground</string>
    <string name="settings_credits_icon_foreground_summary">Technology vector created by freepik - www.freepik.com</string>
    <string name="settings_credits_icon_background_title">Icon Background</string>
    <string name="settings_credits_icon_background_summary">Background vector created by freepik - www.freepik.com</string>
    <string name="settings_credits_error_image_title">Error Image</string>
    <string name="settings_credits_error_image_summary">Technology vector created by freepik - www.freepik.com</string>
    <string name="settings_credits_gilded_icon_title">Gilded Icon</string>
    <string name="settings_credits_gilded_icon_summary">Icon made by Freepik from www.flaticon.com</string>
    <string name="settings_credits_crosspost_icon_title">Crosspost Icon</string>
    <string name="settings_credits_crosspost_icon_summary">Icon made by Freepik from www.flaticon.com</string>
    <string name="settings_credits_thumbtack_icon_title">Thumbtack Icon</string>
    <string name="settings_credits_thumbtack_icon_summary">Icon made by Freepik from www.flaticon.com</string>
    <string name="settings_credits_best_rocket_icon_title">Rocket Icon</string>
    <string name="settings_credits_best_rocket_icon_summary">Icon made by Freepik from www.flaticon.com</string>
    <string name="settings_credits_material_icons_title">Material Icons</string>
    <string name="settings_open_source_title">Open Source</string>
    <string name="settings_open_source_summary">Star it on Github if you like this app</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_version_title">Infinity For Reddit</string>
    <string name="settings_version_summary">Version %s</string>
    <string name="settings_category_customization_title">Customization</string>
    <string name="settings_customize_light_theme_title">Light Theme</string>
    <string name="settings_customize_dark_theme_title">Dark Theme</string>
    <string name="settings_customize_amoled_theme_title">Amoled Theme</string>
    <string name="settings_manage_themes_title">Manage Themes</string>
    <string name="settings_category_material_you_title">Material You</string>
    <string name="settings_enable_material_you_warning_summary">Make sure you don\'t have themes named\n\"Material You\",\n\"Material You Dark\" or\n\"Material You Amoled\".\nOtherwise, rename them before enabling Material You.</string>
    <string name="settings_enable_material_you_title">Enable Material You</string>
    <string name="settings_enable_material_you_summary">Personalize Infinity based on Your Wallpaper</string>
    <string name="settings_apply_material_you_title">Apply Material You</string>
    <string name="settings_apply_material_you_summary">In case Infinity did not change the theme</string>
    <string name="settings_advanced_master_title">Advanced</string>
    <string name="settings_download_location_title">Download Location</string>
    <string name="settings_image_download_location_title">Image Download Location</string>
    <string name="settings_gif_download_location_title">Gif Download Location</string>
    <string name="settings_video_download_location_title">Video Download Location</string>
    <string name="settings_separate_folder_for_each_subreddit">Separate Folder for Each Subreddit</string>
    <string name="settings_save_nsfw_media_in_different_folder_title">Save NSFW Media in Different Location</string>
    <string name="settings_nsfw_download_location_title">NSFW Download Location</string>
    <string name="settings_security_title">Security</string>
    <string name="settings_require_authentication_to_show_accounts">Require Authentication to Show Accounts</string>
    <string name="settings_data_saving_mode">Data Saving Mode</string>
    <string name="settings_data_saving_mode_info_summary">In data saving mode:\nPreview images are in lower resolution.\nReddit videos are in lower resolution.\nVideo autoplay is disabled.</string>
    <string name="settings_miscellaneous_title">Miscellaneous</string>
    <string name="settings_post_filter_title">Post Filter</string>
    <string name="settings_credits_ufo_capturing_animation_title">UFO Capturing Animation</string>
    <string name="settings_disable_image_preview_title">Disable Image Preview in Data Saving Mode</string>
    <string name="settings_only_disable_preview_in_video_and_gif_posts_title">Only Disable Preview in Video and Gif Posts</string>
    <string name="settings_enable_search_history_title">Enable Search History</string>
    <string name="settings_post_history_title">Post History</string>
    <string name="settings_sort_type_title">Sort Type</string>
    <string name="settings_hide_the_number_of_votes">Hide the Number of Votes</string>
    <string name="settings_credits_love_animation_title">Love Animation</string>
    <string name="settings_show_only_one_comment_level_indicator">Show Only One Comment Level Indicator</string>
    <string name="settings_secure_mode_title">Secure Mode</string>
    <string name="settings_secure_mode_summary">Screenshot and video recording are not allowed. No preview in recent app screen.</string>
    <string name="settings_credits_lock_screen_animation_title">Lock Screen Animation</string>
    <string name="settings_app_lock_title">App Lock</string>
    <string name="settings_app_lock_summary">Require authentication before using the app</string>
    <string name="settings_app_lock_timeout_title">App Lock Timeout</string>
    <string name="settings_hide_comment_awards_title">Hide Comment Awards</string>
    <string name="settings_show_fewer_toolbar_options_threshold_title">Show Fewer Toolbar Options Starting From</string>
    <string name="settings_show_author_avatar_title">Show Author Avatar</string>
    <string name="settings_reddit_user_agreement_title">Reddit User Agreement</string>
    <string name="settings_always_show_child_comment_count_title">Always Show the Number of Child Comments</string>
    <string name="settings_miscellaneous_dangerous_group_title">Dangerous</string>
    <string name="settings_post_feed_max_resolution_warning_title">Increase the value to show previews in higher resolution, but the app may crash unexpectedly.</string>
    <string name="settings_post_feed_max_resolution_title">Post Feed Preview Max Resolution (Width * Height)</string>
    <string name="settings_reddit_video_default_resolution">Reddit Video Default Resolution</string>
    <string name="settings_comment_divider_type">Comment Divider Type</string>
</resources>