<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="icon_foreground"
        android:summary="@string/settings_credits_icon_foreground_summary"
        app:title="@string/settings_credits_icon_foreground_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="icon_background"
        android:summary="@string/settings_credits_icon_background_summary"
        app:title="@string/settings_credits_icon_background_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="error_image"
        android:summary="@string/settings_credits_error_image_summary"
        app:title="@string/settings_credits_error_image_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="gilded_icon"
        android:summary="@string/settings_credits_gilded_icon_summary"
        app:title="@string/settings_credits_gilded_icon_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="crosspost_icon"
        android:summary="@string/settings_credits_crosspost_icon_summary"
        app:title="@string/settings_credits_crosspost_icon_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="thumbtack_icon"
        android:summary="@string/settings_credits_thumbtack_icon_summary"
        app:title="@string/settings_credits_thumbtack_icon_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="best_rocket_icon"
        android:summary="@string/settings_credits_best_rocket_icon_summary"
        app:title="@string/settings_credits_best_rocket_icon_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="material_icons"
        app:title="@string/settings_credits_material_icons_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:summary="https://lottiefiles.com/33858-ufo-capturing-animation"
        app:key="ufo_capturing_animation"
        app:title="@string/settings_credits_ufo_capturing_animation_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:summary="https://lottiefiles.com/52103-love"
        app:key="love_animation"
        app:title="@string/settings_credits_love_animation_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:summary="https://lottiefiles.com/69178-cool"
        app:key="lock_screen_animation"
        app:title="@string/settings_credits_lock_screen_animation_title" />

</PreferenceScreen>
