<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeListPreference
        app:defaultValue="2"
        app:entryValues="@array/settings_theme_values"
        app:icon="@drawable/ic_outline_color_lens_24dp"
        app:key="theme"
        app:title="@string/settings_theme_title"
        app:useSimpleSummaryProvider="true" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:icon="@drawable/ic_amoled_theme_preference_24dp"
        app:key="amoled_dark"
        app:title="@string/settings_amoled_dark_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreferenceCategory
        app:title="@string/settings_category_customization_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:icon="@drawable/ic_light_theme_preference_24dp"
        app:isPreferenceVisible="false"
        app:key="customize_light_theme"
        app:title="@string/settings_customize_light_theme_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:icon="@drawable/ic_dark_theme_preference_24dp"
        app:isPreferenceVisible="false"
        app:key="customize_dark_theme"
        app:title="@string/settings_customize_dark_theme_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:icon="@drawable/ic_amoled_theme_preference_24dp"
        app:isPreferenceVisible="false"
        app:key="customize_amoled_theme"
        app:title="@string/settings_customize_amoled_theme_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:icon="@drawable/ic_edit_24dp"
        app:key="manage_themes"
        app:title="@string/settings_manage_themes_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreferenceCategory
        app:title="@string/settings_category_material_you_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:enabled="false"
        app:icon="@drawable/ic_info_preference_24dp"
        app:summary="@string/settings_enable_material_you_warning_summary" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="enable_material_you"
        app:summary="@string/settings_enable_material_you_summary"
        app:title="@string/settings_enable_material_you_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:key="apply_material_you"
        app:summary="@string/settings_apply_material_you_summary"
        app:title="@string/settings_apply_material_you_title" />

</PreferenceScreen>
