<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.NotificationPreferenceFragment"
        app:icon="@drawable/ic_outline_notifications_24dp"
        app:title="@string/settings_notification_master_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.InterfacePreferenceFragment"
        app:icon="@drawable/ic_interface_24dp"
        app:title="@string/settings_interface_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.ThemePreferenceFragment"
        app:icon="@drawable/ic_outline_color_lens_24dp"
        app:title="@string/settings_theme_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.GesturesAndButtonsPreferenceFragment"
        app:icon="@drawable/ic_gesture_24dp"
        app:title="@string/settings_gestures_and_buttons_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:icon="@drawable/ic_outline_video_24dp"
        app:fragment="ml.docilealligator.infinityforreddit.settings.VideoPreferenceFragment"
        app:title="@string/settigns_video_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:icon="@drawable/ic_download_24dp"
        app:fragment="ml.docilealligator.infinityforreddit.settings.DownloadLocationPreferenceFragment"
        app:title="@string/settings_download_location_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.SecurityPreferenceFragment"
        app:icon="@drawable/ic_security_24dp"
        app:key="security"
        app:title="@string/settings_security_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.DataSavingModePreferenceFragment"
        app:icon="@drawable/ic_data_saving_mode_24dp"
        app:title="@string/settings_data_saving_mode" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.NsfwAndSpoilerFragment"
        app:icon="@drawable/ic_nsfw_on_24dp"
        app:title="@string/settings_nsfw_and_spoiler_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:title="@string/settings_post_history_title"
        app:fragment="ml.docilealligator.infinityforreddit.settings.PostHistoryFragment"
        app:icon="@drawable/ic_history_24dp" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:icon="@drawable/ic_filter_24dp"
        app:key="post_filter"
        app:title="@string/settings_post_filter_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.SortTypePreferenceFragment"
        app:icon="@drawable/ic_sort_24dp"
        app:title="@string/settings_sort_type_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:fragment="ml.docilealligator.infinityforreddit.settings.MiscellaneousPreferenceFragment"
        app:icon="@drawable/ic_miscellaneous_24dp"
        app:title="@string/settings_miscellaneous_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:icon="@drawable/ic_advanced_24dp"
        app:fragment="ml.docilealligator.infinityforreddit.settings.AdvancedPreferenceFragment"
        app:title="@string/settings_advanced_master_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:icon="@drawable/ic_about_24dp"
        app:fragment="ml.docilealligator.infinityforreddit.settings.AboutPreferenceFragment"
        app:title="@string/settings_about_master_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="privacy_policy"
        app:icon="@drawable/ic_outline_privacy_policy_24dp"
        app:title="@string/settings_privacy_policy_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        android:key="reddit_user_agreement"
        app:icon="@drawable/ic_outline_user_agreement_24dp"
        app:title="@string/settings_reddit_user_agreement_title" />

</androidx.preference.PreferenceScreen>
