<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="show_top_level_comments_first"
        app:title="@string/settings_show_top_level_comments_first_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="show_comment_divider"
        app:title="@string/settings_show_comment_divider_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeListPreference
        android:title="@string/settings_comment_divider_type"
        app:defaultValue="0"
        app:entries="@array/settings_comment_divider_type"
        app:entryValues="@array/settings_comment_divider_type_values"
        app:isPreferenceVisible="false"
        app:key="comment_divider_type"
        app:useSimpleSummaryProvider="true" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="show_only_one_comment_level_indicator"
        app:title="@string/settings_show_only_one_comment_level_indicator" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="comment_toolbar_hidden"
        app:title="@string/settings_comment_toolbar_hidden" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="true"
        app:key="comment_toolbar_hide_on_click"
        app:title="@string/settings_comment_toolbar_hide_on_click" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        android:title="@string/settings_fully_collapse_comment_title"
        app:defaultValue="false"
        app:key="fully_collapse_comment" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        android:title="@string/settings_show_author_avatar_title"
        app:defaultValue="false"
        app:key="show_author_avatar" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        android:title="@string/settings_hide_comment_awards_title"
        app:defaultValue="false"
        app:key="hide_comment_awards" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        android:title="@string/settings_always_show_child_comment_count_title"
        app:defaultValue="false"
        app:key="always_show_child_comment_count" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="hide_the_number_of_votes_in_comments"
        app:title="@string/settings_hide_the_number_of_votes" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSeekBarPreference
        android:max="10"
        app:defaultValue="5"
        app:key="show_fewer_toolbar_options_threshold"
        app:singleLineTitle="false"
        app:title="@string/settings_show_fewer_toolbar_options_threshold_title" />

</PreferenceScreen>
