<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="save_front_page_scrolled_position"
        app:summary="@string/settings_save_front_page_scrolled_position_summary"
        app:title="@string/settings_save_front_page_scrolled_position_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeListPreference
        app:defaultValue="0"
        app:entries="@array/link_handler"
        app:entryValues="@array/link_handler_values"
        app:icon="@drawable/ic_link"
        app:key="link_handler"
        app:title="@string/settings_link_handler_title"
        app:useSimpleSummaryProvider="true" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeListPreference
        app:defaultValue="0"
        app:entries="@array/main_page_back_button_action"
        app:entryValues="@array/main_page_back_button_action_values"
        app:icon="@drawable/ic_exit_24dp"
        app:key="main_page_back_button_action"
        app:title="@string/settings_main_page_back_button_action"
        app:useSimpleSummaryProvider="true" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="true"
        app:key="enable_search_history"
        app:summary="@string/only_for_logged_in_user"
        app:title="@string/settings_enable_search_history_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreferenceCategory app:title="@string/settings_miscellaneous_dangerous_group_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemePreference
        app:enabled="false"
        app:icon="@drawable/ic_info_preference_24dp"
        app:summary="@string/settings_post_feed_max_resolution_warning_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeEditTextPreference
        app:defaultValue="5000000"
        app:key="post_feed_max_resolution"
        app:title="@string/settings_post_feed_max_resolution_title"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
