<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="require_auth_to_account_section"
        app:title="@string/settings_require_authentication_to_show_accounts" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:key="secure_mode"
        app:summary="@string/settings_secure_mode_summary"
        app:title="@string/settings_secure_mode_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeSwitchPreference
        app:defaultValue="false"
        app:icon="@drawable/ic_outline_lock_24dp"
        app:key="app_lock"
        app:summary="@string/settings_app_lock_summary"
        app:title="@string/settings_app_lock_title" />

    <ml.docilealligator.infinityforreddit.customviews.CustomThemeListPreference
        app:defaultValue="600000"
        app:entries="@array/settings_app_lock_timeout"
        app:entryValues="@array/settings_app_lock_timeout_values"
        app:icon="@drawable/ic_outline_access_time_24dp"
        app:key="app_lock_timeout"
        app:title="@string/settings_app_lock_timeout_title"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
